--- a/StartUp/Views/Shared/_Layout.cshtml
+++ b/StartUp/Views/Shared/_Layout.cshtml
@@ -18,7 +18,6 @@
     <![endif]-->
 
     <meta charset="utf-8"/>
-    <title>@ViewBag.Title - My ASP.NET MVC Application</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width"/>
     @Styles.Render("~/Content/css")
@@ -27,27 +26,31 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="content-wrapper">
+        <div class="col-md-3 col-sm-12 col-xs-12">
             <div class="float-left">
                 <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
             </div>
-            <div class="float-right">
-                <section id="login">
-                    @Html.Partial("_LoginPartial")
-                </section>
-                <nav>
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    </ul>
-                </nav>
+        </div>
+        <div class="col-md-9 col-sm-12 col-xs-12">
+            <div class="content-wrapper">
+                <div class="float-right">
+                    <section id="login">
+                        @Html.Partial("_LoginPartial")
+                    </section>
+                    <nav>
+                        <ul id="menu">
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-3 col-sm-6 col-xs-12">
-            <h1>BootStrap Setting</h1>
+            <h1>Left Side</h1>
         </div>
         <div class="col-md-3 col-sm-6  col-xs-12">
             <h1>Hello, world!</h1>
@@ -58,16 +61,15 @@
     </div>
     <div class="row">
         <div id="body">
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
+            
                 @RenderBody()
-            </section>
+            
         </div>
     </div>
     <div class="row">
         <div class="content-wrapper">
             <div class="float-left">
-                <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
+                <p>&copy; @DateTime.Now.Year - Some information about the copy rigth</p>
             </div>
         </div>
     </div>
