--- a/StartUp/Views/Shared/_Layout.cshtml
+++ b/StartUp/Views/Shared/_Layout.cshtml
@@ -25,30 +25,24 @@
 </head>
 <body>
 <div class="container" style="margin: 0 auto">
-    <div class="row">
-        <div class="col-md-3 col-sm-12 col-xs-12">
-            <div class="float-left">
-                <p class="site-title h1">@Html.ActionLink("your logo here", "Index", "Home")</p>
-            </div>
-        </div>
-        <div class="col-md-9 col-sm-12 col-xs-12">
-            <div class="content-wrapper">
-                <div class="float-right">
-                    <section id="login" class="h4">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    <div>
-                        <ul id="menu">
-                            <li class="h2">@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li class="h2">@Html.ActionLink("About", "About", "Home")</li>
-                            <li class="h2">@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
+    <div class="row" style="margin-top: 50px">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <p class="site-title h1">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                </div>
+                <ul class="nav navbar-nav h2" >
+                    <li>@Html.ActionLink("Home", "Index", "Home", new { style = "text-decoration:none;" })</li>
+                    <li>@Html.ActionLink("About", "About", "Home", new { style = "text-decoration:none;" })</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home", new {style = "text-decoration:none;"})</li>
+                    <li>
+                            @Html.Partial("_LoginPartial")
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
     <div class="row">
         <div id="body" style="background: white">
             @RenderBody()
@@ -92,7 +86,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <p>&copy; @DateTime.Now.Year - Some information about the copy rigth</p>
+            <p style="text-align: center">&copy; @DateTime.Now.Year - Some information about the copy rigth</p>
         </div>
     </div>
 </div>
