replacing loaded photos, modify homepage fonts

--- a/StartUp/Views/Home/Index.cshtml
+++ b/StartUp/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="row">
+<div class="row" style="font-family: ralewayregular">
     <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12 h4">
-        <ul>
+        <ul style="margin-bottom: 10px">
             <li>Tags</li>
             <li>First Category</li>
             <li>Second Category</li>
@@ -14,30 +14,30 @@
     <div class="col-lg-10 col-md-10 col-sm-8 col-xs-12">
         <div class="row" style="margin: 10px; margin-bottom: 50px; margin-top: 50px">
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/1.jpg" class="img-responsive"/>
+                <img src="../../Images/1.jpg" class="img-responsive" />
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4  col-xs-12">
-                <img src="../../Images/2.jpg" class="img-responsive"/>
+                <img src="../../Images/2.jpg" class="img-responsive" />
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/3.jpg" class="img-responsive"/>
+                <img src="../../Images/3.jpg" class="img-responsive" />
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/4.jpg" class="img-responsive"/>
+                <img src="../../Images/4.jpg" class="img-responsive" />
             </div>
         </div>
         <div class="row" style="margin: 10px; margin-bottom: 50px; margin-top: 50px">
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/5.jpg" class="img-responsive"/>
+                <img src="../../Images/5.jpg" class="img-responsive" />
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4  col-xs-12">
-                <img src="../../Images/3.jpg" class="img-responsive"/>
+                <img src="../../Images/3.jpg" class="img-responsive" />
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/7.jpg" class="img-responsive"/>
+                <img src="../../Images/7.jpg" class="img-responsive" />
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/5.jpg" class="img-responsive"/>
+                <img src="../../Images/5.jpg" class="img-responsive" />
             </div>
         </div>
     </div>
