--- a/StartUp/Views/Shared/_Layout.cshtml
+++ b/StartUp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 <body>
 <div class="container" style="margin: 0 auto">
 
-    <div class="row" style="margin-top: 50px">
+    <div class="row" style="margin-top: 50px; font-family: ralewayregular">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -43,7 +43,7 @@
             </div>
         </nav>
     </div>
-    <div class="row">
+    <div class="row" style="font-family: ralewayregular">
         <div id="body" style="background: white">
             @RenderBody()
         </div>
