Database,tables and entity classes are created. The webconfig file is modified.

--- a/StartUp/Views/Shared/_LoginPartial.cshtml
+++ b/StartUp/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,15 @@
 ﻿@if (Request.IsAuthenticated) {
-    <text>
-        Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
-        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
+    <li>@Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage", style = "text-decoration:none;" })</li>
+    <li>
+        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", style = "text-decoration:none; margin-top: 10px" }))
+        {
             @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+            <a href="javascript:document.getElementById('logoutForm').submit()" style="text-decoration: none; margin-top: 10px">Log off</a>
         }
-    </text>
-} else {
+    </li>
+}
+else
+{
     <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", style = "text-decoration:none;" })</li>
     <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", style = "text-decoration:none;" })</li>
     
