menu bar for mobile devices, and some style modification in bootstrap gridview

--- a/StartUp/Content/Site.css
+++ b/StartUp/Content/Site.css
@@ -1,4 +1,15 @@
-﻿html {
+﻿/* my style
+----------------------------------------------------------*/
+
+.my-thumb {
+    margin-top: 10px
+}
+
+
+/* main components
+----------------------------------------------------------*/
+
+html {
     background-color: #e2e2e2;
     margin: 0;
     padding: 0;
