--- a/StartUp/Views/Home/Index.cshtml
+++ b/StartUp/Views/Home/Index.cshtml
@@ -14,30 +14,82 @@
     <div class="col-lg-10 col-md-10 col-sm-8 col-xs-12">
         <div class="row" style="margin: 10px; margin-bottom: 50px; margin-top: 50px">
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/1.jpg" class="img-responsive" />
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-4  col-xs-12">
-                <img src="../../Images/2.jpg" class="img-responsive" />
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/3.jpg" class="img-responsive" />
+                <div class="my-thumb">
+                    1
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/4.jpg" class="img-responsive" />
-            </div>
-        </div>
-        <div class="row" style="margin: 10px; margin-bottom: 50px; margin-top: 50px">
-            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/5.jpg" class="img-responsive" />
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-4  col-xs-12">
-                <img src="../../Images/3.jpg" class="img-responsive" />
+                <div class="my-thumb">
+                    2
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/7.jpg" class="img-responsive" />
+                <div class="my-thumb">
+                    3
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                <img src="../../Images/5.jpg" class="img-responsive" />
+                <div class="my-thumb">
+                    4
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    5
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    6
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    7
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    8
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    9
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    10
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    11
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    12
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    13
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
             </div>
         </div>
     </div>
