--- a/StartUp/Views/Shared/_Layout.cshtml
+++ b/StartUp/Views/Shared/_Layout.cshtml
@@ -25,21 +25,29 @@
 </head>
 <body>
 <div class="container" style="margin: 0 auto">
-
     <div class="row" style="margin-top: 50px; font-family: ralewayregular">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target="#navigation-bar-table">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <p class="site-title h1">@Html.ActionLink("your logo here", "Index", "Home")</p>
                 </div>
-                <ul class="nav navbar-nav h2" >
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { style = "text-decoration:none;" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { style = "text-decoration:none;" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new {style = "text-decoration:none;"})</li>
-                    <li>
+                <div class="collapse navbar-collapse" id="navigation-bar-table">
+                    <ul class="nav navbar-nav navbar-right h2">
+                        <li>@Html.ActionLink("Home", "Index", "Home", new {style = "text-decoration:none;"})</li>
+                        <li>@Html.ActionLink("About", "About", "Home", new {style = "text-decoration:none;"})</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home", new {style = "text-decoration:none;"})</li>
+                        <li>
                             @Html.Partial("_LoginPartial")
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </div>
