--- a/StartUp/Views/Home/Index.cshtml
+++ b/StartUp/Views/Home/Index.cshtml
@@ -2,21 +2,23 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="row" style="font-family: ralewayregular">
+
+
+<div class="row" style="font-family: ralewayregular" id ="secionTop">
     <div class="col-lg-2 col-md-2 col-sm-4 col-xs-12 h4">
         <ul style="margin-bottom: 10px">
-            <li>Tags</li>
-            <li>First Category</li>
-            <li>Second Category</li>
-            <li>Third</li>
+            <li><a href="#sectionFirst">First</a></li>
+            <li><a href="#sectionSecond">Second</a></li>
+            <li><a href="#sectionThird">Third</a></li>
         </ul>
     </div>
     <div class="col-lg-10 col-md-10 col-sm-8 col-xs-12">
-        <div class="row" style="margin: 10px; margin-bottom: 50px; margin-top: 50px">
+        <div class="row" style="margin: 10px; margin-bottom: 50px; margin-top: 50px" id="sectionFirst">
+            <div class="h1">First</div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
                 <div class="my-thumb">
                     1
-                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                    <img src="../../Images/1.jpg" class="img-responsive" />
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
@@ -28,13 +30,94 @@
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
                 <div class="my-thumb">
                     3
-                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                    <img src="../../Images/1.jpg" class="img-responsive" />
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
                 <div class="my-thumb">
                     4
                     <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    5
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    6
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    7
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    8
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    9
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    10
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    11
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    12
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    13
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="margin: 10px; margin-bottom: 50px; margin-top: 50px" id="sectionSecond">
+            <div class="h1">Second</div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    1
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    2
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    3
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    4
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
@@ -88,10 +171,134 @@
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
                 <div class="my-thumb">
                     13
+                    <img src="../../Images/1.jpg" class="img-responsive"/>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="margin: 10px; margin-bottom: 50px; margin-top: 50px" id="sectionThird">
+            <div class="h1">Third</div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    1
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    2
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    3
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    4
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    5
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    6
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    7
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    8
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    9
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    10
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    11
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    12
+                    <img src="../../Images/1.jpg" class="img-responsive" />
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                <div class="my-thumb">
+                    13
                     <img src="../../Images/1.jpg" class="img-responsive" />
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
+
+<script>
+$(document).ready(function(){
+  // Add smooth scrolling to all links
+  $("a").on('click', function(event) {
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+      // Store hash
+      var hash = this.hash;
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+  });
+
+  // Add small button to scroll up to the top
+  $('body').prepend('<a href="#" class="back-to-top">Back to Top</a>');
+  var amountScrolled = 300;
+  $(window).scroll(function () {
+      if ($(window).scrollTop() > amountScrolled) {
+          $('a.back-to-top').fadeIn('slow');
+      } else {
+          $('a.back-to-top').fadeOut('slow');
+      }
+  });
+  $('a.back-to-top').click(function () {
+      $('html, body').animate({
+          scrollTop: 0
+      }, 700);
+      return false;
+  });
+
+});
+</script>
     
